# GCStormySeasInternal

GamesCraftersUWAPI/games/: __init__.py  image_autogui_data.py  nim.py  tootandotto.py
GamesmanPy/: .gitignore  README.md  pyproject.toml
GamesmanPy/database/: pyproject.toml
GamesmanPy/database/src/database/: __init__.py  array_database.py  database.py  duckdb_database.py  sqlite_database.py
GamesmanPy/games/: README.md  pyproject.toml
GamesmanPy/games/src/games/: __init__.py  clobber.py  example.py  game_manager.py  horses.py  pancakes.py  stormyseas.py  ten_to_zero.py  test.py  ttt_inf.py
GamesmanPy/interfaces/: pyproject.toml
GamesmanPy/interfaces/src/interfaces/: __init__.py  main.py  tui.py
GamesmanPy/models/: pyproject.toml
GamesmanPy/models/src/models/: __init__.py  game.py  util.py
GamesmanPy/server/: pyproject.toml
GamesmanPy/server/src/server/: server.py
GamesmanPy/solver/: pyproject.toml
GamesmanPy/solver/src/solver/: main.py  solver.py
