[project]
name = "gamesmanpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "waitress>=3.0.2",
    "duckdb>=1.4.1",
    "pandas>=2.3.3",
    "indexed_gzip>=1.10.1",
    "database",
    "games",
    "interfaces",
    "models",
    "server",
    "solver",
]

[tool.uv.workspace]
members = [
    "database",
    "games",
    "interfaces",
    "models",
    "server",
    "solver",
]

[tool.uv.sources]
database = { workspace = true }
games = { workspace = true }
interfaces = { workspace = true }
models = { workspace = true }
server = { workspace = true }
solver = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/server"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"