[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "michael-wsp", email = "michaelsp@berkeley.edu" }
]
requires-python = ">=3.12"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/server"]

[project.scripts]
server = "server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
