[project]
name = "solver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "michael-wsp", email = "michaelsp@berkeley.edu" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
solver = "solver.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
